--- a/web/package.json
+++ b/web/package.json
@@ -9,21 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.7.0",
     "maplibre-gl": "^3.6.2",
-    "react-map-gl": "^7.1.6",
-    "react-plotly.js": "^2.6.0",
     "plotly.js-dist-min": "^2.35.2",
-    "@supabase/supabase-js": "^2.47.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.6",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@types/leaflet": "^1.9.9",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
